# assinador-livre-rs

./: .gitattributes  Cargo.toml  README.md  assinador-livre-rs_Crash+Logs.evtx  build.rs  index.html
.github/workflows/: check-cross-platform.yml  release-msi.yml  release-msix.yml
assets/: playground.html
downloads/: assinador-livre-rs-0.1.2-x64.msi
scripts/: build-linux-packages.sh  build-macos-package.sh  build-msix.ps1  release-msix.ps1  run-portable.cmd  run-portable.ps1  run-portable.sh  store-submit.ps1  verify-pdfium-hashes.ps1  verify-pdfium-hashes.sh
src/: app.rs  application.rs  cert_dialog.rs  config.rs  contracts.rs  logger.rs  main.rs  signer.rs  signer_backend.rs  startup.rs  tray.rs  ws.rs
src/runtime/: mod.rs  unix.rs  windows.rs
src/signer/: linux.rs  windows.rs
ui/: cert_dialog.slint
wix/: main.wxs
