[package]
name = "assinador-livre"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
directories = "5"
futures-util = "0.3"
lopdf = "0.34"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
single-instance = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.28"
tray-item = "0.10"
uuid = { version = "1", features = ["v4"] }
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }
windows-sys = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging"] }
