[package]
name = "assinador-livre-rs"
version = "0.1.2"
edition = "2024"
rust-version = "1.93"
description = "Aplicacao desktop em Rust para assinatura digital de PDF com certificado A3 no Windows, com API WebSocket local"
license = "MIT"
repository = "https://github.com/celsowm/assinador-livre-rs"
homepage = "https://github.com/celsowm/assinador-livre-rs"
keywords = ["pdf", "assinatura-digital", "windows", "websocket", "a3"]
categories = ["cryptography"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
directories = "5"
futures-util = "0.3"
lopdf = "0.34"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
single-instance = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.28"
uuid = { version = "1", features = ["v4"] }
warp = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }
windows-sys = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = "0.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.wix]
product-name = "Assinador Livre"
manufacturer = "Assinador Livre"
description = "Aplicacao desktop para assinatura digital de PDF com certificado A3 no Windows"
upgrade-guid = "1B5C11A4-51D6-4D63-8CE3-8F2A4EAA2A87"
path-guid = "A9B27FD0-02DA-4F4F-9A1D-C3B8D80F0A1C"
license = false
eula = false
source = "wix/main.wxs"
